[package]
name = "midi-msg"
description = "A (eventually) complete representation of the MIDI 1.0 Detailed Specification and its many extensions and addenda, to allow for the serialization and deserialization of MIDI byte streams to and from a typed representation."
version = "0.3.0"
authors = ["Alex Charlton"]
edition = "2018"
readme = "readme.md"
repository = "https://github.com/AlexCharlton/midi-msg"
documentation = "https://docs.rs/midi-msg"
homepage = "https://github.com/AlexCharlton/midi-msg"
license = "MIT"
keywords = ["midi", "music"]

[dependencies]
ascii = { git="https://github.com/tomprogrammer/rust-ascii", default-features = false, features = ["alloc"] }
micromath = "1.1.1"

[features]
std = []
