[package]
name = "midi-msg"
description = "A (eventually) complete representation of the MIDI 1.0 Detailed Specification and its many extensions and addenda, allowing for the serialization and deserialization of MIDI byte streams to and from a typed representation."
version = "0.6.1"
authors = ["Alex Charlton"]
edition = "2018"
readme = "readme.md"
repository = "https://github.com/AlexCharlton/midi-msg"
documentation = "https://docs.rs/midi-msg"
homepage = "https://github.com/AlexCharlton/midi-msg"
license = "MIT"
keywords = ["midi", "music", "smf", "no_std"]

[dependencies]
bstr = { version="1.0.0", default-features = false, features = ["alloc"], optional = true }
micromath = "1.1.1"
strum = { version = "0.24.1", features = ["derive"], optional = true }

[dev-dependencies]
midir = "0.8.0"

[features]
default = ["std", "sysex", "file"]
std = ["strum"]
sysex = ["bstr"]
file = ["sysex"]
